# health-inspector

./: .gitignore  LICENSE  README.md  api.py  ingest.py  ingestion.py  inspection.py  main.py  pyproject.toml
docs/: HEALTH_INSPECTOR.md
resources/images/: IMG_4047.HEIC  IMG_4048.HEIC  IMG_4049.HEIC
src/health_inspector/: config.py  ingestion.py  inspection.py
